force-app/main/default/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Program is active.</description>
        <inlineHelpText>Indicates if the Program is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Account_on_Connected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the agent connects with the Account, the record is marked as closed. This field is defaulted to unchecked.</description>
        <inlineHelpText>If the agent connects with the Account, the record is marked as closed.</inlineHelpText>
        <label>Close Account on Connected</label>
        <type>Checkbox</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>