force-app/main/default/objects/Program__c/fields/Allow_Add_to_Outreach_Program__c.field-meta.xml
<CustomField>
    <fullName>Allow_Add_to_Outreach_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this option is checked, this program will be available in Add to Outreach buttons for Contacts.</description>
    <inlineHelpText>When this option is checked, this program will be available in Add to Outreach buttons for Contacts.</inlineHelpText>
    <label>Allow Add to Outreach Program</label>
    <type>Checkbox</type>
</CustomField>