force-app/main/default/objects/Program__c/fields/Exclude_Send_Email_Script__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Send_Email_Script__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the agent will not see the portion of script regarding sending email and an email will not be sent.</description>
    <inlineHelpText>When checked, the agent will not see the portion of script regarding sending email and an email will not be sent.</inlineHelpText>
    <label>Exclude Send Email Script</label>
    <type>Checkbox</type>
</CustomField>